fix unnecesary scrollbar

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     min-height: 30px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -28,8 +29,8 @@
 
 
 #body {
-    height: 100%;
-    width: 100%;
+    height: 95%;
+    width: 98%;
     display: grid;
     grid-template-rows: 1fr auto auto auto 2fr;
     justify-content: center;
